<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    android:fillViewport="true"
    android:layout_weight="1"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:paddingStart="25dp"
        android:paddingEnd="25dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:layout_marginBottom="100dp"
            android:src="@drawable/img_logo_green_flag"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="260dp"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/advent_pro"
            android:text="@string/description"
            android:textSize="24sp"
            android:textColor="@color/colorWhite"
            android:layout_below="@+id/logo"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"/>

        <ImageView
            android:id="@+id/check_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/description"
            android:src="@drawable/ic_check_lime_16dp"
            android:layout_below="@+id/description"
            android:layout_alignBottom="@+id/opt_1"
            android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/opt_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/description"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@+id/check_1"
            android:fontFamily="@font/advent_pro"
            android:text="@string/opt_1"
            android:textSize="18dp"
            android:textColor="@color/colorWhite"/>

        <ImageView
            android:id="@+id/check_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/description"
            android:src="@drawable/ic_check_lime_16dp"
            android:layout_below="@id/check_1"
            android:layout_alignBottom="@id/opt_2"/>

        <TextView
            android:id="@+id/opt_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/opt_1"
            android:layout_marginStart="@dimen/opt_margin_start"
            android:layout_toEndOf="@id/check_2"
            android:fontFamily="@font/advent_pro"
            android:text="@string/opt_2"
            android:textSize="@dimen/opt_text_size"
            android:textColor="@color/colorWhite"/>

        <ImageView
            android:id="@+id/check_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/description"
            android:src="@drawable/ic_check_lime_16dp"
            android:layout_below="@id/check_2"
            android:layout_alignBottom="@id/opt_3"/>

        <TextView
            android:id="@+id/opt_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/opt_2"
            android:layout_marginStart="@dimen/opt_margin_start"
            android:layout_toEndOf="@id/check_2"
            android:textSize="@dimen/opt_text_size"
            android:fontFamily="@font/advent_pro"
            android:text="@string/opt_3"
            android:textColor="@color/colorWhite"/>

        <Button
            android:id="@+id/btn_create_acct"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:height="0dp"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="23dp"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:text="@string/create_an_account"
            android:background="@color/colorLime"
            android:textAllCaps="false"
            android:layout_below="@+id/opt_3"/>

    </RelativeLayout>

</ScrollView>