<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAcctActivity"
    android:background="@color/colorBlack">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_arrow_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_left_lime_40dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="18dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/back_to_home_page"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_an_account"
            android:layout_toEndOf="@id/iv_arrow_left"
            android:layout_marginStart="40dp"
            android:layout_marginBottom="15dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/ft_description"
            android:textColor="@color/colorWhite"/>

        <TableRow android:layout_below="@id/title" android:layout_width="match_parent"
                  android:layout_height="0.2dp"
                  android:background="@color/colorWhite"
                  android:layout_marginBottom="35dp">

        </TableRow>

        <TextView
            android:id="@+id/tv_email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/et_email"
            android:text="@string/email_address_label"
            android:textColor="@color/colorWhite"
            android:layout_below="@id/title"
            android:layout_alignStart="@id/et_email"
            android:textSize="@dimen/txt_size_label"
            android:layout_marginTop="30dp"/>

        <EditText
            android:id="@+id/et_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_email_label"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/margin_top_input_text"
            android:layout_marginBottom="@dimen/margin_bottom_input_text"
            android:width="@dimen/et_width"
            android:background="@color/colorWhite"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textSize="20dp" />
        <ImageView
            android:id="@+id/iv_check_email"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignRight="@+id/et_email"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/tv_email_label"
            android:src="@drawable/ic_check_lime_16dp"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/tv_email_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_email"
            android:layout_above="@id/tv_pwd_label"
            android:layout_centerHorizontal="true"
            android:layout_alignStart="@id/et_email"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:padding="15dp"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:id="@+id/tv_pwd_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/et_email"
            android:text="@string/create_password_label"
            android:textColor="@color/colorWhite"
            android:layout_below="@id/et_email"
            android:layout_alignStart="@id/et_email"
            android:textSize="@dimen/txt_size_label"/>
        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_pwd_label"
            android:background="@color/colorWhite"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/criteria_hint"
            android:padding="10dp"
            android:layout_centerInParent="true"
            android:width="@dimen/et_width"
            android:layout_marginTop="@dimen/margin_top_input_text"
            android:layout_marginBottom="@dimen/margin_bottom_input_text"/>
        <ImageView
            android:id="@+id/iv_check_pwd"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignRight="@+id/et_pwd"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/tv_pwd_label"
            android:src="@drawable/ic_check_lime_16dp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tv_pwd_confirm_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/et_pwd_confirm"
            android:text="@string/repeat_password_label"
            android:textColor="@color/colorWhite"
            android:layout_below="@id/et_pwd"
            android:layout_alignStart="@id/et_email"
            android:textSize="@dimen/txt_size_label"/>
        <EditText
            android:id="@+id/et_pwd_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_pwd_confirm_label"
            android:background="@color/colorWhite"
            android:ems="10"
            android:inputType="textPassword"
            android:padding="10dp"
            android:layout_centerInParent="true"
            android:width="@dimen/et_width"
            android:layout_marginTop="@dimen/margin_top_input_text"
            android:layout_marginBottom="@dimen/margin_bottom_input_text"/>
        <ImageView
            android:id="@+id/iv_check_pwd_conf"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignRight="@+id/et_pwd_confirm"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/tv_pwd_confirm_label"
            android:src="@drawable/ic_check_lime_16dp"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/tv_pwd_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_pwd_confirm"
            android:layout_centerInParent="true"
            android:layout_alignStart="@id/et_email"
            android:width="@dimen/et_width"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="2dp"
            android:padding="15dp"
            android:textColor="@color/colorWhite"
            android:visibility="gone"
        />

        <TextView
            android:id="@+id/tv_pwd_criteria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_pwd_error"
            android:layout_alignStart="@id/et_pwd_confirm"
            android:layout_centerInParent="true"
            android:text="@string/pwd_criteria"
            android:textColor="@color/colorWhite"
            android:width="@dimen/et_width"
            android:textSize="15dp"
            android:layout_marginTop="15dp"/>

        <Button
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textAllCaps="false"
            android:width="@dimen/et_width"
            android:layout_alignStart="@id/et_pwd_confirm"
            android:layout_below="@id/tv_pwd_criteria"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_marginTop="38dp"
            android:background="@color/colorLime"
            android:enabled="false"/>

    </RelativeLayout>

</ScrollView>